bad/assign_literal_true_array.example_compiler_output
ERROR
[1mbad/assign_literal_true_array.lat:4:7: [1;31merror: [0;1mleft side is not assignable[m
	true = new int[3];
	     [1;32m^[m
[1mbad/assign_literal_true_array.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	true = new int[3];
	[1;32m^[m
